--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,7 +7,7 @@ pipeline {
         AWS_SECRET_ACCESS_KEY = credentials('jem-aws-secret-access-key')
 
         AWS_S3_BUCKET = "jawza-belt2d2-artifacts-123456"
-        ARTIFACT_NAME = "hello.jar"
+        ARTIFACT_NAME = "jawza.jar"
         AWS_EB_APP_NAME = "jawzaexam"
         AWS_EB_APP_VERSION = "${BUILD_ID}"
         AWS_EB_ENVIRONMENT = "Jawzaexam-env"
